[gd_scene load_steps=6 format=2]

[ext_resource path="res://Elementos/Visuais/Botoes/BotaoSolto5x3.svg" type="Texture" id=1]
[ext_resource path="res://Elementos/Visuais/Botoes/BotaoSelecionado5x3.svg" type="Texture" id=2]
[ext_resource path="res://Cenas/FonteComicSans.tscn" type="PackedScene" id=3]
[ext_resource path="res://Elementos/Visuais/Icones/Padrao.svg" type="Texture" id=4]
[ext_resource path="res://Codigos/BotaoVertical.gd" type="Script" id=5]

[node name="BotaoVertical" type="TextureButton"]
keep_pressed_outside = true
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 2 )
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ConteinerVertical" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Icone" type="TextureRect" parent="ConteinerVertical"]
margin_top = 50.0
margin_right = 175.0
margin_bottom = 148.0
texture = ExtResource( 4 )
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Texto" parent="ConteinerVertical" instance=ExtResource( 3 )]
self_modulate = Color( 0, 0, 0, 1 )
margin_top = 152.0
margin_right = 175.0
margin_bottom = 237.0
text = "Texto"
align = 1
valign = 1

[connection signal="button_down" from="." to="." method="_on_BotaoVertical_Selecionado"]
[connection signal="button_up" from="." to="." method="_on_BotaoVertical_Solto"]
[connection signal="pressed" from="." to="." method="_on_BotaoVertical_Comando"]
[connection signal="toggled" from="." to="." method="_on_BotaoVertical_Modo"]
